--- a/KessokuBand.html
+++ b/KessokuBand.html
@@ -1,4 +1,5 @@
 <html>
 <h1>Bocchi</h1>
 <img src= https://upload.wikimedia.org/wikipedia/en/0/08/Bocchi_The_Rock%21_volume_1_cover.jpg>
+<img src= https://upload.wikimedia.org/wikipedia/en/0/08/Bocchi_The_Rock%21_volume_1_cover.jpg>
 </html>
