--- a/KessokuBand.html
+++ b/KessokuBand.html
@@ -2,4 +2,6 @@
 <h1>Bocchi</h1>
 <img src= https://upload.wikimedia.org/wikipedia/en/0/08/Bocchi_The_Rock%21_volume_1_cover.jpg>
 <img src= https://upload.wikimedia.org/wikipedia/en/0/08/Bocchi_The_Rock%21_volume_1_cover.jpg>
+  <img src= https://upload.wikimedia.org/wikipedia/en/0/08/Bocchi_The_Rock%21_volume_1_cover.jpg>
+
 </html>
